feat(json): create parser + unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ target_link_libraries(doom_depth_c
 add_executable(doom_depth_tests
         test.c
         src/minunit/minunit.h
+        src/storage/json/json.c
         src/storage/json/json_test.c
         src/storage/json/json.h
         src/utils/array.c
