--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,9 @@ add_executable(doom_depth_c
         src/sdl_utils/sdl_utils.c
         src/sdl_utils/sdl_utils.h
         src/storage/database/database.h
-        src/storage/database/database.c)
+        src/storage/database/database.c
+        src/storage/database/database_queries.h
+        src/storage/database/database_queries.c)
 
 find_package(unofficial-sqlite3 CONFIG REQUIRED)
 target_link_libraries(doom_depth_c PRIVATE unofficial::sqlite3::sqlite3)
