feat(sdl): create string to texture function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,3 +64,9 @@ target_link_libraries(doom_depth_tests
         $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
         $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
 )
+
+find_package(SDL2_ttf CONFIG REQUIRED)
+target_link_libraries(doom_depth_c
+        PRIVATE
+        $<IF:$<TARGET_EXISTS:SDL2_ttf::SDL2_ttf>,SDL2_ttf::SDL2_ttf,SDL2_ttf::SDL2_ttf-static>
+)
