--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(doom_depth_c
         src/entities/player/player.h
         src/entities/spell/spell.h
         src/entities/fight/fight.h
+        src/entities/fight/fight.c
         src/entities/stats/stats.h
         src/entities/weapon/weapon.h
         src/storage/json/json.c
@@ -28,8 +29,7 @@ add_executable(doom_depth_c
         src/storage/database/database_queries.h
         src/storage/database/database_queries.c
         src/map/stage/stage.c
-        src/map/stage/stage.h
-        src/entities/fight/fight.c)
+        src/map/stage/stage.h)
 
 find_package(unofficial-sqlite3 CONFIG REQUIRED)
 target_link_libraries(doom_depth_c PRIVATE unofficial::sqlite3::sqlite3)
