feat(sdl): create image to texture function with sdl2-image lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,3 +82,9 @@ target_link_libraries(doom_depth_c
         PRIVATE
         $<IF:$<TARGET_EXISTS:SDL2_ttf::SDL2_ttf>,SDL2_ttf::SDL2_ttf,SDL2_ttf::SDL2_ttf-static>
 )
+
+find_package(SDL2_image CONFIG REQUIRED)
+target_link_libraries(doom_depth_c
+        PRIVATE
+        $<IF:$<TARGET_EXISTS:SDL2_image::SDL2_image>,SDL2_image::SDL2_image,SDL2_image::SDL2_image-static>
+)
