--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,9 @@ add_executable(doom_depth_c
         src/fight_screen/fight_actions/fight_actions.h
         src/game_over/game_over.h
         src/game_over/game_over.c
-        src/utils/router.h)
+        src/utils/router.h
+        src/fight_screen/fight_dimensions/fight_dimensions.c
+        src/fight_screen/fight_dimensions/fight_dimensions.h)
 
 find_package(unofficial-sqlite3 CONFIG REQUIRED)
 target_link_libraries(doom_depth_c PRIVATE unofficial::sqlite3::sqlite3)
