feat(cli-utils): start creating cli utils

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,9 @@ add_executable(doom_depth_c
         src/game_over/game_over.c
         src/utils/router.h
         src/fight_screen/fight_dimensions/fight_dimensions.c
-        src/fight_screen/fight_dimensions/fight_dimensions.h)
+        src/fight_screen/fight_dimensions/fight_dimensions.h
+        src/cli_utils/cli_utils.c
+        src/cli_utils/cli_utils.h)
 
 find_package(unofficial-sqlite3 CONFIG REQUIRED)
 target_link_libraries(doom_depth_c PRIVATE unofficial::sqlite3::sqlite3)
