feat(inventory): define inventory user experience

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ add_executable(doom_depth_c
         src/map_screen/map/display/display.h
         src/event/event.c
         src/event/event.h
+        src/inventory_screen/inventory_screen.h
 )
 
 add_executable(doom_depth_c_windows
@@ -121,6 +122,7 @@ add_executable(doom_depth_c_windows
         src/map_screen/map/display/display.h
         src/event/event.c
         src/event/event.h
+        src/inventory_screen/inventory_screen.h
 )
 
 add_executable(doom_depth_tests
@@ -166,6 +168,7 @@ add_executable(doom_depth_tests
         src/map_screen/map/display/display.h
         src/map_screen/stage/display/display.c
         src/map_screen/stage/display/display.h
+        src/inventory_screen/inventory_screen.h
 )
 
 find_package(unofficial-sqlite3 CONFIG REQUIRED)
