feat(inventory): display and choose categories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ add_executable(doom_depth_c
         src/map_screen/map/display/display.h
         src/event/event.c
         src/event/event.h
+        src/inventory_screen/inventory_screen.c
         src/inventory_screen/inventory_screen.h
 )
 
@@ -122,6 +123,7 @@ add_executable(doom_depth_c_windows
         src/map_screen/map/display/display.h
         src/event/event.c
         src/event/event.h
+        src/inventory_screen/inventory_screen.c
         src/inventory_screen/inventory_screen.h
 )
 
@@ -168,6 +170,7 @@ add_executable(doom_depth_tests
         src/map_screen/map/display/display.h
         src/map_screen/stage/display/display.c
         src/map_screen/stage/display/display.h
+        src/inventory_screen/inventory_screen.c
         src/inventory_screen/inventory_screen.h
 )
 
