--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,10 @@ add_executable(doom_depth_c
         src/inventory_screen/inventory_screen.h
         src/utils/utils.c
         src/utils/utils.h
+        src/inventory_screen/display/display.c
+        src/inventory_screen/display/display.h
+        src/inventory_screen/inventory_utils/inventory_utils.c
+        src/inventory_screen/inventory_utils/inventory_utils.h
 )
 
 add_executable(doom_depth_c_windows
@@ -129,6 +133,10 @@ add_executable(doom_depth_c_windows
         src/inventory_screen/inventory_screen.h
         src/utils/utils.c
         src/utils/utils.h
+        src/inventory_screen/display/display.c
+        src/inventory_screen/display/display.h
+        src/inventory_screen/inventory_utils/inventory_utils.c
+        src/inventory_screen/inventory_utils/inventory_utils.h
 )
 
 add_executable(doom_depth_tests
@@ -176,6 +184,10 @@ add_executable(doom_depth_tests
         src/map_screen/stage/display/display.h
         src/inventory_screen/inventory_screen.c
         src/inventory_screen/inventory_screen.h
+        src/inventory_screen/display/display.c
+        src/inventory_screen/display/display.h
+        src/inventory_screen/inventory_utils/inventory_utils.c
+        src/inventory_screen/inventory_utils/inventory_utils.h
 )
 
 find_package(unofficial-sqlite3 CONFIG REQUIRED)
