feat(inventory-cli): implement basic cli display, still lots of problems to solve

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,8 @@ set(cross_platform_targets
         src/fight_screen/fight_menu/display/gui/gui.h
         src/inventory_screen/display/gui/gui.c
         src/inventory_screen/display/gui/gui.h
+        src/inventory_screen/display/cli/cli.c
+        src/inventory_screen/display/cli/cli.h
 )
 
 # for unix
